Hello everyone

VLC3: Some MOUSE_BUTTON_CENTER clicks are not being passed to plugins

If you play around with clicking on the mouse wheel, you will notice that VLC doesn't tell plugins about some of the clicks.

If you click on the mouse wheel twice in a short period of time, Qt generates the following events: pressed, released, double-click, released. VLC3 passes only MOUSE_BUTTON_LEFT double-clicks to plugins, so plugins don't receive the MOUSE_BUTTON_CENTER double-clicks. Plugins also don't receive the last "released" event as VLC3 filters consecutive released/pressed events where mouse buttons have not changed, which is now the case with the double-click event being filtered out.

This effectively makes it so that plugins are not aware of the second MOUSE_BUTTON_CENTER click if it's done under 300ms (or whatever the double-click interval is). This can be an issue if a plugin wants to bind some sort of an action on a MOUSE_BUTTON_CENTER click, as it can't reliably detect those events.

VLC4 doesn't have this issue, it passes all double-click events to the plugins.

Edited by nurupo